--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -20,6 +20,25 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
 
+    <style>
+      @import url("https://fonts.googleapis.com/css?family=Oswald:400,500");
+    </style>
+    <style>
+      @import url("https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css");
+      * {
+        -webkit-font-smoothing: antialiased;
+        box-sizing: border-box;
+      }
+      html,
+      body {
+        margin: 0px;
+        height: 100%;
+      }
+      a {
+        text-decoration: none;
+      }
+    </style>
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
